force-app/main/default/objects/ManagingVisitReports__mdt/ManagingVisitReports__mdt.object-meta.xml
<CustomObject>
    <label>Visit Report Settings</label> 
    <pluralLabel>Visit Report Settings</pluralLabel>
</CustomObject>