force-app/main/default/objects/ManagingVisitReports__mdt/fields/ExtendedContactsasAttendees__c.field-meta.xml
<CustomField>
    <fullName>ExtendedContactsasAttendees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be set as TRUE if you want to add as attendees contacts that are related to accounts other than the one for which the visit report was created.</description>
    <label>Extended Contacts as Attendees</label>
    <type>Checkbox</type>
</CustomField>