force-app/main/default/objects/ManagingVisitReports__mdt/fields/ExtendUsersasAttendees__c.field-meta.xml
<CustomField>
    <fullName>ExtendUsersasAttendees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be set as TRUE if you want to add internal users as attendees for visit reports.</description>
    <label>Extend Users as Attendees</label>
    <type>Checkbox</type>
</CustomField>