force-app/main/default/objects/ManagingVisitReports__mdt/fields/ManageChecklists__c.field-meta.xml
<CustomField>
    <fullName>ManageChecklists__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field should be set as TRUE if the the Manage Checklists functionality should be available to users.</description>
    <label>Manage Checklists</label>
    <type>Checkbox</type>
</CustomField>