force-app/main/default/objects/ManagingVisitReports__mdt/fields/ManageExternalAttendees__c.field-meta.xml
<CustomField>
    <fullName>ManageExternalAttendees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be set as TRUE if the the Manage External Attendees functionality should be available to users.</description>
    <label>Manage External Attendees</label>
    <type>Checkbox</type>
</CustomField>