force-app/main/default/objects/ManagingVisitReports__mdt/fields/ManageInternalAttendees__c.field-meta.xml
<CustomField>
    <fullName>ManageInternalAttendees__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field should be set as TRUE if the the Manage Internal Attendees functionality should be available to users.</description>
    <label>Manage Internal Attendees</label>
    <type>Checkbox</type>
</CustomField>